--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,113 @@
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Helvetica Neue, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, sans-serif;
+  line-height: 1.6;
+  font-size: 1.1rem;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  background-color: #f1e0d3;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
+
+p {
+  margin-bottom: 2.25rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #575757;
+}
+
+body.noscroll {
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+h4 {
+  font-weight: 500;
+}
+
+h1 {
+  margin-bottom: 1.5rem;
+  font-size: 2.35rem;
+  letter-spacing: -1.5px;
+  font-weight: 800;
+  color: black;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 64em) {
+  h1 {
+    font-size: 3.25rem;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+  font-weight: 500;
+}
+
+@media (min-width: 64em) {
+  h2 {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+}
+
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.button {
+  display: inline-block;
+  padding: 0.35rem 1.75rem;
+  background: #161616;
+  cursor: pointer;
+  border: 0;
+  font-weight: 400;
+  border-radius: 5px;
+  font-size: 1rem;
+  color: #fff;
+  transition: opacity 150ms ease-in-out;
+  text-decoration: none;
+}
+
+.button:hover {
+  opacity: 0.85;
+  text-decoration: none;
+  transform: scale(1.01);
 }
